tests/sema/fail/v18_fail_adt_common_field_missing.ep
# COMPILE_FAIL: union Node has no common field meta
struct Meta {
    line: i64
}
struct Leaf {
    meta: Meta
    value: i64
}
struct Pair {
    value: i64
}
type Node = Leaf | Pair
fun main(): i64 {
    let m = new Meta { line: 1 }
    let n: Node = new Node(new Leaf { meta: m, value: 1 })
    ret n.meta.line
}
